--- a/public_html/package.json
+++ b/public_html/package.json
@@ -18,5 +18,14 @@
   "bugs": {
     "url": "https://github.com/woodsleaf/imiro/issues"
   },
-  "homepage": "https://github.com/woodsleaf/imiro#readme"
+  "homepage": "https://github.com/woodsleaf/imiro#readme",
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^3.0.1",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-less": "^4.0.1",
+    "gulp-pug": "^4.0.1"
+  },
+  "dependencies": {}
 }
