--- a/public_html/package.json
+++ b/public_html/package.json
@@ -21,10 +21,19 @@
   "homepage": "https://github.com/woodsleaf/imiro#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
+    "gulp-debug": "^4.0.0",
+    "gulp-if": "^3.0.0",
     "gulp-imagemin": "^6.0.0",
     "gulp-less": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
+    "gulp-webp": "^4.0.1",
     "gulp-pug": "^4.0.1"
   },
   "dependencies": {}
