--- a/public_html/package.json
+++ b/public_html/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/woodsleaf/imiro#readme",
   "devDependencies": {
+    "browser-sync": "^2.26.7",
+    "browserlist": "^1.0.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean": "^0.4.0",
@@ -30,11 +32,14 @@
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^6.0.0",
     "gulp-less": "^4.0.1",
+    "gulp-markdown": "^4.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^1.0.4",
     "gulp-webp": "^4.0.1",
-    "gulp-pug": "^4.0.1"
+    "jekyll": "^3.0.0-beta1"
   },
   "dependencies": {}
 }
