--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "url": "https://github.com/woodsleaf/imiro/issues"
   },
   "homepage": "https://github.com/woodsleaf/imiro#readme",
+  "installConfig": {"pnp": true},
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "browserlist": "^1.0.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
+    "gulp-changed": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
@@ -32,11 +34,13 @@
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^6.0.0",
     "gulp-less": "^4.0.1",
+    "gulp-line-ending-corrector": "^1.0.3",
     "gulp-markdown": "^4.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^1.0.4",
     "gulp-webp": "^4.0.1",
     "jekyll": "^3.0.0-beta1"
