--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "url": "https://github.com/woodsleaf/imiro/issues"
   },
   "homepage": "https://github.com/woodsleaf/imiro#readme",
-  "installConfig": {"pnp": true},
+  "installConfig": {
+    "pnp": true
+  },
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "browserlist": "^1.0.1",
+    "gifsicle": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-changed": "^4.0.0",
@@ -43,7 +46,13 @@
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^1.0.4",
     "gulp-webp": "^4.0.1",
-    "jekyll": "^3.0.0-beta1"
+    "imagemin": "^7.0.0",
+    "imagemin-jpeg-recompress": "^6.0.0",
+    "imagemin-webp": "^5.1.0",
+    "jekyll": "^3.0.0-beta1",
+    "jpegtran": "^1.0.6",
+    "optipng": "^2.1.0",
+    "svgo": "^1.3.0"
   },
   "dependencies": {}
 }
