--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
     "gulp-debug": "^4.0.0",
+    "gulp-ext-replace": "^0.3.0",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^6.0.0",
     "gulp-less": "^4.0.1",
