--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ public_html/media/*
 #Полный путь к каталогу который надо исключить из исключения /public_html/node_modules/open-sans-fonts/fonts/
 #игнорим node_modules(и в нем нет пустого файла .gitignore)
 */node_modules/*
+node_modules/*
 #разрешаем подкаталог open-sans-fonts
 #!*/node_modules/open-sans-fonts/
 #игнорим содержимое подкаталога open-sans-fonts(и в нем тоже нет .gitignore)
