--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ public_html/media/*
 !*/images/.gitignore
 
 */vendor/*
+vendor/*
 #Полный путь к каталогу который надо исключить из исключения /public_html/node_modules/open-sans-fonts/fonts/
 #игнорим node_modules(и в нем нет пустого файла .gitignore)
 */node_modules/*
