--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
-    "browserlist": "^1.0.1",
+    "browserslist": "^4.6.6",
     "gifsicle": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
@@ -32,6 +32,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
+    "gulp-connect-php": "^1.0.3",
     "gulp-csso": "^3.0.1",
     "gulp-debug": "^4.0.0",
     "gulp-ext-replace": "^0.3.0",
@@ -44,6 +45,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-twig": "^1.2.0",
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^1.0.4",
     "gulp-webp": "^4.0.1",
@@ -55,5 +57,9 @@
     "optipng": "^2.1.0",
     "svgo": "^1.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "sass-lint": "^1.13.1"
+  },
+  "peerDependencies": {}
 }
