Fix gulp build, add clean, remove trash

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "browserslist": "^4.6.6",
+    "del": "^5.0.0",
     "gifsicle": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
